feat: cms slider config conversion on post update

--- a/src/Resources/app/administration/src/component/blur-elysium-slider-config-arrows/blur-elysium-slider-config-arrows.twig
+++ b/src/Resources/app/administration/src/component/blur-elysium-slider-config-arrows/blur-elysium-slider-config-arrows.twig
@@ -57,7 +57,7 @@
                             numberType="int"
                             :step="1"
                             :label="$tc('blurElysiumSlider.config.arrows.size.label')"
-                            v-model="arrowsViewportConfig.size">
+                            v-model="arrowsViewportConfig.iconSize">
                             <template #suffix>Px</template>
                             <template #hint><blur-elysium-device-hint /></template>
                         </sw-number-field>
