feat(ISSUE-54): Rename Slide property button_label to buttonLabel

--- a/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-basic-form/blur-elysium-slides-basic-form.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-basic-form/blur-elysium-slides-basic-form.twig
@@ -238,7 +238,7 @@
 
                         {% block blur_elysium_slides_input_button_label %}
                             <sw-text-field
-                                v-model="slide.button_label" 
+                                v-model="slide.buttonLabel" 
                                 :label="$tc('blurElysiumSlides.linking.button.label.label')"
                                 :placeholder="$tc('blurElysiumSlides.linking.button.label.placeholder')"
                                 :helpText="$tc('blurElysiumSlides.linking.button.label.helpText')"
