--- a/src/Resources/views/storefront/component/blur-elysium-slide/includes/content.html.twig
+++ b/src/Resources/views/storefront/component/blur-elysium-slide/includes/content.html.twig
@@ -39,7 +39,7 @@
 
     {% set descriptionContent = slideData.translated.description %}
     {% set showActions = actionMainUrl and slideData.slideSettings.slide.linking.overlay is not same as( true ) %}
-    {% set actionMainLabel = slideData.translated.button_label ?? 'blurElysium.slide.buttonLabel'|trans %}
+    {% set actionMainLabel = slideData.translated.buttonLabel ?? 'blurElysiumSlides.buttonLabel'|trans %}
 
     {% block blur_elysium_slide_content_element %}
         <div class="blur-elysium-slide-content">
