fix: correct value update on slide.description

--- a/src/Resources/app/administration/src/component/slides/form/general/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/general/template.html.twig
@@ -89,7 +89,7 @@
             gap="30px">
 
             <sw-text-editor
-                v-model="slide.description"
+                v-model:value="slide.description"
                 :label="$tc('blurElysium.general.content')"
                 :style="{ width: '100%' }" />
 
