feat: add acl permissions to slides modules

--- a/src/Resources/app/administration/src/component/settings/template.html.twig
+++ b/src/Resources/app/administration/src/component/settings/template.html.twig
@@ -35,6 +35,7 @@
         <sw-button
             variant="primary"
             class="sw-extension-config__save-action"
+            :disabled="!permissonEdit"
             @click.prevent="onSave"
         >
             {{ $tc('global.default.save') }}
