--- a/src/Resources/app/administration/src/component/slides/form/cover/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/cover/template.html.twig
@@ -34,6 +34,7 @@
                     allowed-file="image/*"
                     :uploadTag="coverImageUploadTag" 
                     :media="coverImageMedia" 
+                    :disabled="!(permissionCreate || permissionEdit)"
                     @media-remove="payload => resetMedia( coverImageProperty )"
                     @upload-finished="payload => setMedia( coverImageProperty, payload.targetId )"
                     @media-dropped="payload => setMedia( coverImageProperty, payload.id, 'image')"
@@ -96,6 +97,7 @@
                     allowed-file="image/*"
                     :uploadTag="'blur-elysium-slide-cover-video'" 
                     :media="coverVideoMedia" 
+                    :disabled="!(permissionCreate || permissionEdit)"
                     @media-remove="payload => resetMedia( 'slideCoverVideo' )"
                     @upload-finished="payload => setMedia( 'slideCoverVideo', payload.targetId )"
                     @media-dropped="payload => setMedia( 'slideCoverVideo', payload.id, 'image')"
