--- a/src/Resources/views/storefront/component/blur-elysium-slide/includes/image.html.twig
+++ b/src/Resources/views/storefront/component/blur-elysium-slide/includes/image.html.twig
@@ -9,10 +9,7 @@
         {% if imageMedia %}           
             <div class="{{ containerClasses|join(' ') }}">
                 {% sw_thumbnails 'elysium-slide-thumbnails' with {
-                    media: imageMedia,
-                    attributes: {
-                        'class': 'mw-100'
-                    }
+                    media: imageMedia
                 } %}
             </div>
         {% endif %}
