--- a/src/Resources/views/storefront/component/blur-elysium-slide/includes/style.html.twig
+++ b/src/Resources/views/storefront/component/blur-elysium-slide/includes/style.html.twig
@@ -101,6 +101,11 @@
                             {% else %}
                                 --image-order: 2;
                             {% endif %}
+                            {% if options.image.imageFullWidth is same as(true) %}
+                                --image-width: 100%;
+                            {% else %}
+                                --image-width: auto;
+                            {% endif %}
                             {% if options.image.justifyContent is defined %}
                                 --image-justify-content: {{ options.image.justifyContent }};
                             {% endif %}
@@ -124,7 +129,7 @@
                             {% if options.content.paddingY %}
                                 --content-padding-y: {{ options.content.paddingY ~ 'px' }};
                             {% endif %}
-                            {% if options.content.maxWidth %}
+                            {% if options.content.maxWidth is defined and options.content.maxWidthDisabled is not same as(true) %}
                                 --content-max-w: {{ options.content.maxWidth ~ 'px' }};
                             {% endif %}
 
