--- a/src/Resources/app/storefront/src/scss/_elysium-block.scss
+++ b/src/Resources/app/storefront/src/scss/_elysium-block.scss
@@ -9,4 +9,9 @@
 
 .blur-elysium-block {
     padding: 0;
+    grid-template-columns: var(--columns);
+
+    &.one-col {
+        --columns: minmax(0, 1fr);
+    }
 }
