fix: whitelisted HTML tag works again

--- a/src/Resources/views/storefront/component/blur-elysium-slide/default/slide.html.twig
+++ b/src/Resources/views/storefront/component/blur-elysium-slide/default/slide.html.twig
@@ -12,6 +12,15 @@
     {% set showContainerWrapper = false %}
 {% endif %}
 
+{% set headlineTagsWhitelist = [
+    '<br>',
+    '<i>',
+    '<b>',
+    '<u>',
+    '<strong>',
+    '<span>'
+] %}
+
 {% set headlineContent = slideData.translated.title|striptags( headlineTagsWhitelist|join ) %}
 {% set descriptionContent = slideData.translated.description %}
 {% set actionMainUrl = slideData.translated.url %}
