change cmsPageState from vuex to pinia

--- a/src/Resources/app/administration/src/component/cms/elements/blur-elysium-banner/config/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/elements/blur-elysium-banner/config/template.html.twig
@@ -3,7 +3,7 @@
     <blur-device-switch 
         layout="row"
         show-label="false"
-        :default-viewport="currentCmsDeviceView"
+        :default-viewport="activeViewport"
         @change-viewport="changeViewport" 
         :style="{
             padding: '0',
