fix: set d-block and img-fluid to focus image element

--- a/src/Resources/app/storefront/src/scss/_elysium-slide.scss
+++ b/src/Resources/app/storefront/src/scss/_elysium-slide.scss
@@ -132,6 +132,8 @@
     max-width: var(--image-max-w);
 
     img {
+        @extend .d-block !optional;
+        @extend .img-fluid !optional;
         width: var(--image-width);
     }
 }
