feat(#115): add lazy-loading to banner element

--- a/src/Resources/app/administration/src/component/cms/elements/blur-elysium-banner/config/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/elements/blur-elysium-banner/config/template.html.twig
@@ -31,6 +31,14 @@
                 v-model:value="selectedSlide" />
         </blur-column>
 
+        <blur-column>
+            <mt-switch 
+                class="blur-switch-input"
+                :label="$tc('blurElysiumBanner.config.lazyLoading')"
+                :checked="config.lazyLoading.value" 
+                @change="config.lazyLoading.value = $event"/>
+        </blur-column>
+
     </blur-section>
 
     <blur-section
