--- a/src/Resources/views/storefront/element/cms-element-blur-elysium-banner.html.twig
+++ b/src/Resources/views/storefront/element/cms-element-blur-elysium-banner.html.twig
@@ -44,7 +44,8 @@
 
             {% block cms_element_blur_elysium_banner_slide_include %}
                 {% sw_include '@Storefront/storefront/component/blur-elysium-slide/' ~ slideTemplate ~ '/' ~ slideFile ignore missing with {
-                    slideData: element.data.elysiumSlide
+                    slideData: element.data.elysiumSlide,
+                    lazyLoading: element.translated.config.lazyLoading.value ?? true
                 } %}
             {% endblock %}
         </div>
