--- a/src/Resources/views/storefront/component/blur-elysium-slide/includes/cover-image.html.twig
+++ b/src/Resources/views/storefront/component/blur-elysium-slide/includes/cover-image.html.twig
@@ -1,5 +1,6 @@
 {% block blur_elysium_slide_cover_image %}
     {% set slideCovers = {} %}
+    {% set lazyLoading = lazyLoading|default(false) %}
 
     {% if slideData.slideCoverMobile %}
         {% set slideCovers = slideCovers|merge({
@@ -46,7 +47,10 @@
                     width="100%"
                     height="100%"
                     alt=""
-                    class="blur-elysium-slide-cover-image" />
+                    class="blur-elysium-slide-cover-image" 
+                    {% if lazyLoading is same as(true) %}
+                        loading="lazy"
+                    {% endif %} />
 
             </picture>
         {% endblock %}
