--- a/src/Resources/views/storefront/element/cms-element-blur-elysium-slider.html.twig
+++ b/src/Resources/views/storefront/element/cms-element-blur-elysium-slider.html.twig
@@ -1,7 +1,8 @@
 {% set sliderAutoplay = element.translated.config.settings.value.autoplay %}
 {% set sliderNavigation = element.translated.config.navigation.value %}
 {% set sliderArrows = element.translated.config.arrows.value %}
-{% set slideContainerWrapper = false %}
+{% set sliderTitle = element.translated.config.content.value.title %}
+{% set showContainerWrapper = false %}
 
 {% set sliderOptions = {
     splideOptions: {
@@ -18,56 +19,65 @@
     }
 } %}
 
-{% set cmsSliderClasses = [
+{# @todo #124: Change `merge` to shopwares `replace_recursive` filter #}
+{# set breakpoint specific splide slider options #}
+{% set breakpointSliderOptions = {
+    (theme_config('breakpoint.' ~ blurElysiumBreakpoints.mobile)): {
+        perPage: element.config.viewports.value.mobile.settings.slidesPerPage ?? 1,
+        gap: element.config.viewports.value.mobile.sizing.slidesGap ?? 0
+    },
+    (theme_config('breakpoint.' ~ blurElysiumBreakpoints.tablet)): {
+        perPage: element.config.viewports.value.tablet.settings.slidesPerPage ?? 1,
+        gap: element.config.viewports.value.tablet.sizing.slidesGap ?? 0
+    },
+    (theme_config('breakpoint.' ~ blurElysiumBreakpoints.desktop)): {
+        perPage: element.config.viewports.value.desktop.settings.slidesPerPage ?? 1,
+        gap: element.config.viewports.value.desktop.sizing.slidesGap ?? 0
+    }
+} %}
+
+{% set sliderOptions = sliderOptions|merge({
+    splideOptions: sliderOptions.splideOptions|merge({
+        breakpoints: breakpointSliderOptions
+    })
+}) %}
+
+{% set sliderClasses = [
     'cms-element-elysium-slider'
 ] %}
 
+{% set slideWrapperClasses = [
+    'cms-element-elysium-slide__wrapper',
+    'splide__slide',
+    'd-flex',
+    'flex-column',
+] %}
+
+{% set slideClasses = ['flex-fill'] %}
+
+{% if element.config.settings.value.overlay is same as(true) %}
+    {% set sliderClasses = sliderClasses|merge([
+        'slide-overlay'
+    ]) %}
+{% endif %}
+
+{% if element.config.settings.value.containerWidth is same as('content') %}
+    {% set showContainerWrapper = true %}
+{% endif %}
+
 {% block cms_element_blur_elysium_slider_root %}
-
-    {% if element.config.settings.value.containerWidth is same as('content') %}
-        {% set slideContainerWrapper = true %}
-    {% endif %}
-
-    {% if element.config.settings.value.overlay is same as(true) %}
-        {% set cmsSliderClasses = cmsSliderClasses|merge([
-            'slide-overlay'
-        ]) %}
-    {% endif %}
-
-    {# set breakpoint specific splide slider options #}
-    {% set breakpointSliderOptions = {
-        (theme_config('breakpoint.' ~ blurElysiumBreakpoints.mobile)): {
-            perPage: element.config.viewports.value.mobile.settings.slidesPerPage ?? 1,
-            gap: element.config.viewports.value.mobile.sizing.slidesGap ?? 0
-        },
-        (theme_config('breakpoint.' ~ blurElysiumBreakpoints.tablet)): {
-            perPage: element.config.viewports.value.tablet.settings.slidesPerPage ?? 1,
-            gap: element.config.viewports.value.tablet.sizing.slidesGap ?? 0
-        },
-        (theme_config('breakpoint.' ~ blurElysiumBreakpoints.desktop)): {
-            perPage: element.config.viewports.value.desktop.settings.slidesPerPage ?? 1,
-            gap: element.config.viewports.value.desktop.sizing.slidesGap ?? 0
-        }
-    } %}
-    {% set sliderOptions = sliderOptions|merge({
-        splideOptions: sliderOptions.splideOptions|merge({
-            breakpoints: breakpointSliderOptions
-        })
-    }) %}
 
     {% block cms_element_blur_elysium_slider_css_styles %}
         {% sw_include '@Storefront/storefront/component/blur-elysium-slider/style.html.twig' %}
     {% endblock %}
 
     {% block cms_element_blur_elysium_slider %}
-        {# you can override sliderSettings variables on this block #}
-
         <div id="elysiumSlider-{{ element.id }}" 
             data-blur-elysium-slider="{{sliderOptions|json_encode|replace({'%replace%': ''}) }}"
-            class="{{cmsSliderClasses|join(' ')}}">
+            class="{{sliderClasses|join(' ')}}">
 
             {% block blur_elysium_control_include_header %} 
-                {% if element.translated.config.content.value.title is not empty %} 
+                {% if sliderTitle is not empty %} 
                     {% sw_include '@Storefront/storefront/component/blur-elysium-slider/header.html.twig' %}
                 {% endif %}
             {% endblock %}
@@ -81,7 +91,9 @@
 
                 {% block cms_element_blur_elysium_slider_container %}
                     <section class="blur-elysium-slider splide"
-                        aria-label="Elysium Slider Title"
+                        {% if sliderTitle is not empty %}
+                            aria-label="{{sliderTitle}}"
+                        {% endif %}
                         data-blur-elysium-slider-container>
 
                         {% block cms_element_blur_elysium_slide_wrapper %}
@@ -92,7 +104,7 @@
                                 <div class="splide__track">
                                     <ul class="splide__list">
                                         {% for slide in element.data.slideCollection %}
-                                            <li class="cms-element-elysium-slide__wrapper splide__slide">
+                                            <li class="{{slideWrapperClasses|join(' ')}}">
 
                                                 {% block cms_element_blur_elysium_slide_include %}
                                                     {% set slideTemplate = 'default' %}
@@ -109,7 +121,7 @@
 
                                                     {% sw_include '@Storefront/storefront/component/blur-elysium-slide/' ~ slideTemplate ~ '/' ~ slideFile ignore missing with {
                                                         slideData: slide,
-                                                        showContainerWrapper: slideContainerWrapper
+                                                        showContainerWrapper: showContainerWrapper
                                                     } %}
                                                 {% endblock %}
                                             </li>
